--- a/fcc-responsive-web-design/index.html
+++ b/fcc-responsive-web-design/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   <h1>CatPhotoApp</h1>
-  <h2>Cat Photos</h2>
-  <p>Click here to view more cat photos.</p>
+  <main>
+    <h2>Cat Photos</h2>
+    <!-- Todo: Add link to cat photos-->
+    <p>Click here to view more cat photos.</p>
+    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="a cute orange cat lying on its back">
+    <a href="https://freecatphotoapp.com"></a>
+  </main>
 </body>
 </html>
