--- a/fcc-responsive-web-design/index.html
+++ b/fcc-responsive-web-design/index.html
@@ -9,11 +9,16 @@
 <body>
   <h1>CatPhotoApp</h1>
   <main>
-    <h2>Cat Photos</h2>
-    <!-- Todo: Add link to cat photos-->
-    <p>Click here to view more cat photos.</p>
-    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="a cute orange cat lying on its back">
-    <a href="https://freecatphotoapp.com"></a>
+    <section>
+      <h2>Cat Photos</h2>
+      <!-- Todo: Add link to cat photos-->
+      <p>Click here to view more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a></p>
+      <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+        alt="a cute orange cat lying on its back"></a>
+    </section>
+    <section>
+
+    </section>
   </main>
 </body>
 </html>
