--- a/fcc-responsive-web-design/index.html
+++ b/fcc-responsive-web-design/index.html
@@ -17,7 +17,17 @@
         alt="a cute orange cat lying on its back"></a>
     </section>
     <section>
-
+      <h2>Cat Lists</h2>
+      <h3>Things Cats Love:</h3>
+      <ul>
+        <li>cat nip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
+      </ul>
+      <figure>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+        <figcaption>Cats love lasagna.</figcaption>
+      </figure>
     </section>
   </main>
 </body>
