--- a/fcc-responsive-web-design/index.html
+++ b/fcc-responsive-web-design/index.html
@@ -36,8 +36,16 @@
       </ol>
       <figure>
         <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-        <figcaption>Cats hate other cats.</figcaption>
+        <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
       </figure>
+    </section>
+    <section>
+      <h2>Cat form</h2>
+      <form action="https://freecatphotoapp.com/submit-cat-photo">
+        <input type="radio">Indoor
+        <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+        <button>Submit</button>
+      </form>
     </section>
   </main>
 </body>
