--- a/fcc-responsive-web-design/index.html
+++ b/fcc-responsive-web-design/index.html
@@ -42,7 +42,8 @@
     <section>
       <h2>Cat form</h2>
       <form action="https://freecatphotoapp.com/submit-cat-photo">
-        <input type="radio">Indoor
+        <label><input type="radio" id="Indoor">indoor</label>
+        <label><input id="outdoor" type="radio">outdoor</label>
         <input type="text" name="catphotourl" placeholder="cat photo URL" required>
         <button>Submit</button>
       </form>
