added footer with no copyright words while adding checked attribute to first input radio and checkbox.

--- a/fcc-responsive-web-design/index.html
+++ b/fcc-responsive-web-design/index.html
@@ -44,12 +44,12 @@
       <form action="https://freecatphotoapp.com/submit-cat-photo">
         <fieldset>
           <legend>Is your cat an indoor or outdoor cat?</legend>
-          <label><input type="radio" value="indoor" id="indoor">indoor</label>
+          <label><input type="radio" value="indoor" id="indoor" checked>indoor</label>
           <label><input id="outdoor" value="outdoor" type="radio">outdoor</label>
         </fieldset>
         <fieldset>
           <legend>What's your cat's personality?</legend>
-          <input id="loving" value="loving" type="checkbox" name="personality"><label for="loving">Loving</label>
+          <input id="loving" value="loving" type="checkbox" name="personality" checked><label for="loving">Loving</label>
           <input id="lazy" value="lazy" type="checkbox" name="personality"><label for="lazy">Lazy</label>
           <input id="energetic" value="energetic" type="checkbox" name="personality"><label for="energetic">Energetic</label>
         </fieldset>
@@ -58,5 +58,10 @@
       </form>
     </section>
   </main>
+  <footer>
+    <p>
+      No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
+    </p>
+  </footer>
 </body>
 </html>
