--- a/fcc-cafe-menu/index.html
+++ b/fcc-cafe-menu/index.html
@@ -7,6 +7,9 @@
   <title>FCC Cafe Menu</title>
 </head>
 <body>
-
+  <header>
+    <h1>CAMPER CAFE</h1>
+    <p>Est. 2020</p>
+  </header>
 </body>
 </html>
