--- a/fcc-cafe-menu/index.html
+++ b/fcc-cafe-menu/index.html
@@ -8,14 +8,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>CAMPER CAFE</h1>
-    <p>Est. 2020</p>
-  </header>
-  <main>
-    <section>
-      <h2>Coffee</h2>
-    </section>
-  </main>
+  <div class="menu">
+    <header>
+      <h1>CAMPER CAFE</h1>
+      <p>Est. 2020</p>
+    </header>
+    <main>
+      <section>
+        <h2>Coffee</h2>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
