--- a/fcc-cafe-menu/index.html
+++ b/fcc-cafe-menu/index.html
@@ -13,6 +13,7 @@
       <h1>CAMPER CAFE</h1>
       <p class="established">Est. 2020</p>
     </header>
+    <hr>
     <main>
       <section>
         <h2>Coffee</h2>
@@ -57,6 +58,13 @@
         </article>
       </section>
     </main>
+    <hr class="bottom-line">
+    <footer>
+      <p>
+        <a href="https://www.freecodecamp.org">Visit our website</a>
+      </p>
+      <p>123 Free Code Camp Drive</p>
+    </footer>
   </div>
 </body>
 </html>
